# kde-material-you-colors

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .pylintrc  .release-please-manifest.json  Arc-Color-clone2  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  MANIFEST.in  MaterialYouDark.colors  MaterialYouLight.colors  PKGBUILD  README.md  color_scheme.py  color_utils.py  current_wallpaper  example-output.json  fedora-based-install.sh  index.html  install-devel.sh  install-fedora-based.sh  install-screenshot-helper.sh  install-ubuntu-based.sh  kde-material-you-colors  kde-material-you-colors.desktop  kde-material-you-colors.py  kde-material-you-colors.service  main.py  material-color-utility  material-dynamic-colors.js  material-dynamic-colors.min.js  old.colors  old.json  plasma-theme  putput.json  pyproject.toml  release-please-config.json  (+8 more)
.config/kde-material-you-colors/: config.conf
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-please.yml
.oldscripts/: install-ubuntu-based.sh
Test2/: Program.cs  Test2.csproj  out.json
Test2/Json.Net.1.0.33/: .signature.p7s  Json.Net.1.0.33.nupkg
material-color-utility/: CustomScorer.cs  Program.cs  material-color-utility.csproj
plasmoid/: CMakeLists.txt  install.sh  package-plasmoid.sh
plasmoid/package/: metadata.json
plasmoid/package/contents/config/: config.qml  config.xml  main.xml
plasmoid/package/contents/ui/: CompactRepresentation.qml  FullRepMain.qml  FullRepresentation.qml  MainWidgetContent.qml  configGeneral.qml  main.qml
plasmoid/package/contents/ui/components/: CustomColorButton.qml  PlasmoidIcon.qml
src/: color_utils.py  config.py  extra_image_utils.py  globals.py  kde-material-you-colors  kde-material-you-colors-stop.desktop  kde-material-you-colors.desktop  logging_config.py  sample_config.conf  schemeconfigs.py  theme_selector.py  utils.py
src/backend/: MANIFEST.in  pyproject.toml
src/backend/kde_material_you_colors/: apply_themes.py  config.py  main.py  schemeconfigs.py  settings.py
src/backend/kde_material_you_colors/data/: kde-material-you-colors-stop.desktop  kde-material-you-colors.desktop  sample_config.conf
src/backend/kde_material_you_colors/utils/: color_utils.py  konsole_utils.py  m3_scheme_utils.py  math_utils.py  plasma_utils.py  pywal_utils.py  string_utils.py  titlebar_utils.py  utils.py  wallpaper_utils.py
src/kde_material_you_colors/: apply_themes.py  config.py  logging_config.py  main.py  schemeconfigs.py  settings.py  theme_selector.py
src/kde_material_you_colors/data/: kde-material-you-colors-stop.desktop  kde-material-you-colors.desktop  sample_config.conf
src/kde_material_you_colors/data/material-color-utilities-cli/: extendedSchemes.js  main.js  package-lock.json  package.json  utils.js
src/kde_material_you_colors/utils/: color_utils.py  dbus_utils.py  extra_image_utils.py  file_utils.py  konsole_utils.py  ksyntax_utils.py  kwin_utils.py  m3_scheme_utils.py  m3_theme_utils.py  notify.py  plasma_utils.py  pywal_utils.py  timeout_utils.py  titlebar_utils.py  utils.py  wallpaper_utils.py
src/kde_material_you_colors/utils/m3/: custom_score.py
src/plasmoid/: CHANGELOG.md  CMakeLists.txt
src/plasmoid/package/: metadata.json
src/plasmoid/package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  configGeneral.qml  main.qml
src/plasmoid/package/contents/ui/components/: About.qml  ColorRolePreview.qml  ColorsPreview.qml  CustomColorButton.qml  FadeBehavior.qml  PlasmoidIcon.qml
src/screenshot_helper/: CMakeLists.txt  main.cpp
src/screenshot_helper/desktop/: CMakeLists.txt  kde-material-you-colors-screenshot-helper.cmake
src/utils/: color_utils.py  config_utils.py  extra_image_utils.py  file_utils.py  konsole_utils.py  ksyntax_utils.py  kwin_utils.py  m3_scheme_utils.py  m3_theme_utils.py  math_utils.py  plasma_utils.py  pywal_sequences_timeout.py  pywal_utils.py  string_utils.py  timeout_utils.py  titlebar_utils.py  utils.py  wallpaper_utils.py
src/utils/palettes/: palettes.py
