[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kde-material-you-colors"
version = "1.6.0"
description = "Automatic Material You Colors Generator from your wallpaper for the Plasma Desktop"
readme = "README.md"
authors = [{name = "Luis Bocanegra", email = "luisbocanegra17b@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Desktop Environment :: K Desktop Environment (KDE) :: Themes",
    "Environment :: X11 Applications :: KDE",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.8"

dependencies = [
    "dbus-python>=1.3.2",
    "numpy>=1.20",
    "material-color-utilities-python>=0.1.5",
]

[project.scripts]
kde-material-you-colors = "kde_material_you_colors.main:main"

[project.optional-dependencies]
cli = [
    "pywal>=3.3.0"
]

[project.urls]
"Homepage" = "https://github.com/luisbocanegra/kde-material-you-colors"
"Repository" = "https://github.com/luisbocanegra/kde-material-you-colors"
"Bug Tracker" = "https://github.com/luisbocanegra/kde-material-you-colors/issues"
